--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <nav>
                 <ul class="ul-list">
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#top">HOME</a></li>
                     <li><a href="#portfolio">PORTFOLIO</a></li>
                     <li><a href="#hobbies">HOBBIES</a></li>
                     <li><a href="#contact">CONTACT</a></li>
@@ -108,7 +108,7 @@
 
 
             <ul class="footer-nav">
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="#top">HOME</a></li>
                 <li><a href="#portfolio">PORTFOLIO</a></li>
                 <li><a href="#hobbies">HOBBIES</a></li>
                 <li><a href="#contact">CONTACT</a></li>
